Implemented javascript and added css

--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
     <div class="game">
       <h1>Rock, Paper or Scissors?</h1>
         <div class="selection">
-          <button class="choice" id="R" value="rock">Rock</button>
-          <button class="choice" id="P" value="paper">Paper</button>
-          <button class="choice" id="S" value="scissors">Scissors</button>
+          <button class="choice" id="R" value="rock"></button>
+          <button class="choice" id="P" value="paper"></button>
+          <button class="choice" id="S" value="scissors"></button>
+        </div>
+        <div class="match"></div>
+        <div class="scores">
+          <div class="playerScore">Player: <span id="playerScore"></span></div>
+          <div class="computerScore">Computer: <span id="computerScore"></span></div>
+        </div>
+        <div class="results">
+          <div id="roundResult"></div>
+          <div id="gameResult"></div>
+          <button id="again" hidden="true">Play Again</button>
         </div>
    </div>
   </body>
