Improved the original design and working on buttons' functions

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <div class="results">
           <div id="roundResult"></div>
           <div id="gameResult"></div>
-          <button id="again" hidden="true">Play Again</button>
+          <button class="again" hidden="true">Play Again</button>
+        </div>
+        <div class="goButton">
+          <button class="go">Play Round</button>
         </div>
    </div>
   </body>
