Player and computer selections are now visible

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
           <button class="choice" id="P" value="paper"></button>
           <button class="choice" id="S" value="scissors"></button>
         </div>
-        <div class="match"></div>
+        <div class="match">
+          <div id="player"></div>
+          <div class="vs"> VS </div>
+          <div id="computer"></div>
+        </div>
         <div class="scores">
           <div class="playerScore">Player: <span id="playerScore"></span></div>
           <div class="computerScore">Computer: <span id="computerScore"></span></div>
